--- a/todoList/index.html
+++ b/todoList/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>Todo list</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div id="container">
-        <h1>To-do List</h1>
-        <input type="text">
+        <h1>To-do List <i class="fas fa-plus"></i></h1>
+        <input type="text" placeholder="Add New">
         <ul>
-            <li><span>X</span> Go to potions class</li>
-            <li><span>X</span> Buy new robes</li>
-            <li><span>X</span> Visit Hagrid</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Go to potions class</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Buy new robes</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Visit Hagrid</li>
         </ul>
     </div>
 
